// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/UserCenter/PermissionList should refresh permission table when click pagination button 1`] = `
<body>
  <div>
    <div
      class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-scroll-horizontal"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup />
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        操作权限名称
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        操作范围粒度
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        描述
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="70000"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="70001"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="70002"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="70003"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="70004"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="70005"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="70006"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="70007"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="70008"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="70009"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700010"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700011"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700012"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700013"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700014"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700015"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700016"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700017"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700018"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700019"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <ul
            class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination actiontech-table-pagination-fixed css-dev-only-do-not-override-bj9uhl"
          >
            <li
              class="ant-pagination-total-text"
            >
              <span>
                共 60 条数据
              </span>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-prev ant-pagination-disabled"
              title="Previous Page"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
              tabindex="0"
              title="1"
            >
              <a
                rel="nofollow"
              >
                1
              </a>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-2"
              tabindex="0"
              title="2"
            >
              <a
                rel="nofollow"
              >
                2
              </a>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-3"
              tabindex="0"
              title="3"
            >
              <a
                rel="nofollow"
              >
                3
              </a>
            </li>
            <li
              aria-disabled="false"
              class="ant-pagination-next"
              tabindex="0"
              title="Next Page"
            >
              <button
                class="ant-pagination-item-link"
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-options"
            >
              <div
                aria-label="Page Size"
                class="ant-select ant-pagination-options-size-changer css-dev-only-do-not-override-bj9uhl ant-select-single ant-select-show-arrow ant-select-show-search"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Page Size"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      role="combobox"
                      type="search"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                    title="20 / page"
                  >
                    20 / page
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/UserCenter/PermissionList should refresh permission table when click pagination button 2`] = `
<body>
  <div>
    <div
      class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-scroll-horizontal"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup />
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        操作权限名称
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        操作范围粒度
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        描述
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700020"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700021"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700022"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700023"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700024"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700025"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700026"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700027"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700028"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700029"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700030"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700031"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700032"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700033"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700034"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700035"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700036"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700037"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700038"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700039"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <ul
            class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination actiontech-table-pagination-fixed css-dev-only-do-not-override-bj9uhl"
          >
            <li
              class="ant-pagination-total-text"
            >
              <span>
                共 60 条数据
              </span>
            </li>
            <li
              aria-disabled="false"
              class="ant-pagination-prev"
              tabindex="0"
              title="Previous Page"
            >
              <button
                class="ant-pagination-item-link"
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-1"
              tabindex="0"
              title="1"
            >
              <a
                rel="nofollow"
              >
                1
              </a>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-2 ant-pagination-item-active"
              tabindex="0"
              title="2"
            >
              <a
                rel="nofollow"
              >
                2
              </a>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-3"
              tabindex="0"
              title="3"
            >
              <a
                rel="nofollow"
              >
                3
              </a>
            </li>
            <li
              aria-disabled="false"
              class="ant-pagination-next"
              tabindex="0"
              title="Next Page"
            >
              <button
                class="ant-pagination-item-link"
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-options"
            >
              <div
                aria-label="Page Size"
                class="ant-select ant-pagination-options-size-changer css-dev-only-do-not-override-bj9uhl ant-select-single ant-select-show-arrow ant-select-show-search"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Page Size"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      role="combobox"
                      type="search"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                    title="20 / page"
                  >
                    20 / page
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/UserCenter/PermissionList should render empty tips when request error 1`] = `
<body>
  <div>
    <div
      class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-empty ant-table-scroll-horizontal"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup />
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        操作权限名称
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        操作范围粒度
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        描述
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-placeholder"
                    >
                      <td
                        class="ant-table-cell"
                        colspan="3"
                      >
                        <div
                          class="ant-table-expanded-row-fixed"
                          style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                        />
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/UserCenter/PermissionList should render permission table when request success 1`] = `
<body>
  <div>
    <div
      class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-scroll-horizontal"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup />
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        操作权限名称
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        操作范围粒度
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        描述
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700001"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="20100"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        创建项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="20150"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        修改项目
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        数据源
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <ul
            class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination actiontech-table-pagination-fixed css-dev-only-do-not-override-bj9uhl"
          >
            <li
              class="ant-pagination-total-text"
            >
              <span>
                共 3 条数据
              </span>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-prev ant-pagination-disabled"
              title="Previous Page"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
              tabindex="0"
              title="1"
            >
              <a
                rel="nofollow"
              >
                1
              </a>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-next ant-pagination-disabled"
              title="Next Page"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-options"
            >
              <div
                aria-label="Page Size"
                class="ant-select ant-pagination-options-size-changer css-dev-only-do-not-override-bj9uhl ant-select-single ant-select-show-arrow ant-select-show-search"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Page Size"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      role="combobox"
                      type="search"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                    title="20 / page"
                  >
                    20 / page
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</body>
`;
